feat: playlist management support (#514)
* add playlist nav page

* create model and service for persistent playlist

rename

* implement base viewmodel

* fix playlistservice

* fix more issues

wip: temp fix PlaylistsPageViewModel

* fix PlaylistService

* create PlaylistViewModel

* Connect playlists page with view models

* wip: create playlist dialog

* support json read and write

* fix XAML files

* fix create playlists dialog style

* using FileIO to write JSON to file

* feat: add PlaylistDetailsPage

* use FileIO to read json from file

* save files to playlist

* move save method into PlaylistViewModel

* rename and delete playlist

* directly bind details page to PlaylistViewModel

* load playlists in the MainPageViewModel

* Add to playlist sub (SongsPage)

* refine playlist grid view to show items count

* create CreatePlaylistCommand to combine dialog and VM logic

* refine AddToPlaylistFlyoutSubmenuBehavior and delete CreatePlaylistCommand

* add "add to playlist" submenu to all relevant pages

* minor clean up

* handle duplicated items in PlaylistViewModel

* localize CreatePlaylistDialog

* more localization

* use commands instead of onclick handlers for playlist rename and delete

* Undo resources VS lint

* add new icon, access key and shortcut to playlist nav item

* add context flyout menu items

* better playlist load error handling

* mark not media not parsable unavailable

* remove subtitle on playlist details page
playlist details doesnt need subtitle. adjust button row animation offset as well

* handle command execution on empty playlists

* adjust some dynamic padding

---------

Co-authored-by: United600 <United600@users.noreply.github.com>

--- a/Screenbox/Pages/MainPage.xaml
+++ b/Screenbox/Pages/MainPage.xaml
@@ -16,6 +16,7 @@
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:strings="using:Screenbox.Strings"
     xmlns:triggers="using:Screenbox.Triggers"
+    xmlns:ui="using:CommunityToolkit.WinUI"
     muxc:BackdropMaterial.ApplyToRootOrPageBackground="True"
     Loaded="MainPage_Loaded"
     mc:Ignorable="d">
@@ -186,6 +187,19 @@
                     </muxc:NavigationViewItem.KeyboardAccelerators>
                     <TextBlock x:Name="PlayQueueNavItemText" Text="{strings:Resources Key=PlayQueue}" />
                 </muxc:NavigationViewItem>
+                <muxc:NavigationViewItem
+                    extensions:AcceleratorService.ToolTip="{x:Bind PlaylistsNavItemText.Text}"
+                    AccessKey="{x:Bind strings:KeyboardResources.NavigationItemPlaylistKey}"
+                    KeyTipPlacementMode="Right"
+                    Tag="playlists">
+                    <muxc:NavigationViewItem.Icon>
+                        <FontIcon FontFamily="{StaticResource ScreenboxSymbolThemeFontFamily}" Glyph="{StaticResource PlaylistGlyph}" />
+                    </muxc:NavigationViewItem.Icon>
+                    <muxc:NavigationViewItem.KeyboardAccelerators>
+                        <KeyboardAccelerator Key="P" Modifiers="Control" />
+                    </muxc:NavigationViewItem.KeyboardAccelerators>
+                    <TextBlock x:Name="PlaylistsNavItemText" Text="{strings:Resources Key=Playlists}" />
+                </muxc:NavigationViewItem>
             </muxc:NavigationView.MenuItems>
             <muxc:NavigationView.FooterMenuItems>
                 <!--  Reimplement settings nav item to allow transition  -->
@@ -354,6 +368,12 @@
                                 Duration="{StaticResource NavItemTextShowDuration}" />
                             <DoubleAnimation
                                 Storyboard.TargetName="PlayQueueNavItemText"
+                                Storyboard.TargetProperty="Opacity"
+                                From="0"
+                                To="1"
+                                Duration="{StaticResource NavItemTextShowDuration}" />
+                            <DoubleAnimation
+                                Storyboard.TargetName="PlaylistsNavItemText"
                                 Storyboard.TargetProperty="Opacity"
                                 From="0"
                                 To="1"
