--- a/Screenbox/Pages/PlaylistsPage.xaml
+++ b/Screenbox/Pages/PlaylistsPage.xaml
@@ -1,29 +1,23 @@
 ﻿<Page
-    x:Class="Screenbox.Pages.AllVideosPage"
+    x:Class="Screenbox.Pages.PlaylistsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:behaviors="using:Screenbox.Behaviors"
     xmlns:commands="using:Screenbox.Commands"
+    xmlns:controls="using:Screenbox.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:local="using:Screenbox.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:strings="using:Screenbox.Strings"
     xmlns:triggers="using:CommunityToolkit.WinUI"
     xmlns:ui="using:CommunityToolkit.WinUI"
+    xmlns:viewmodels="using:Screenbox.Core.ViewModels"
     mc:Ignorable="d">
-
     <Page.Resources>
         <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Controls/Templates/GridViewItemTemplates.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-
             <MenuFlyout x:Key="ItemFlyout">
-                <interactivity:Interaction.Behaviors>
-                    <behaviors:AddToPlaylistFlyoutSubmenuBehavior TargetSubItemName="AddToPlaylistSubMenu" />
-                </interactivity:Interaction.Behaviors>
-
                 <MenuFlyoutItem
                     Command="{x:Bind ViewModel.PlayCommand}"
                     CommandParameter="{Binding}"
@@ -31,59 +25,90 @@
                                        Glyph={StaticResource PlayGlyph}}"
                     Text="{strings:Resources Key=Play}" />
                 <MenuFlyoutItem
-                    Command="{x:Bind Common.PlayNextCommand}"
+                    Command="{x:Bind ViewModel.PlayNextCommand}"
                     CommandParameter="{Binding}"
                     Icon="{ui:FontIcon FontFamily={StaticResource ScreenboxSymbolThemeFontFamily},
                                        Glyph={StaticResource PlayAddGlyph}}"
                     Text="{strings:Resources Key=PlayNext}" />
                 <MenuFlyoutItem
-                    Command="{x:Bind Common.AddToQueueCommand}"
+                    Command="{x:Bind ViewModel.AddToQueueCommand}"
                     CommandParameter="{Binding}"
                     Icon="{ui:FontIcon FontFamily={StaticResource ScreenboxSymbolThemeFontFamily},
                                        Glyph={StaticResource PlaylistMusicGlyph}}"
                     Text="{strings:Resources Key=AddToQueue}" />
                 <MenuFlyoutSeparator />
-                <MenuFlyoutSubItem
-                    x:Name="AddToPlaylistSubMenu"
-                    Icon="{ui:SymbolIcon Symbol=Add}"
-                    Text="{strings:Resources Key=AddToPlaylist}" />
                 <MenuFlyoutItem
-                    Command="{StaticResource ShowPropertiesCommand}"
+                    Command="{x:Bind RenamePlaylistCommand}"
                     CommandParameter="{Binding}"
-                    Icon="{ui:FontIcon Glyph=&#xE946;}"
-                    Text="{strings:Resources Key=Properties}" />
-                <MenuFlyoutSeparator Visibility="{x:Bind Common.IsAdvancedModeEnabled}" />
+                    Icon="{ui:SymbolIcon Symbol=Rename}"
+                    Text="{strings:Resources Key=Rename}" />
                 <MenuFlyoutItem
+                    Command="{x:Bind DeletePlaylistCommand}"
                     CommandParameter="{Binding}"
-                    Icon="{ui:SymbolIcon Symbol=Setting}"
-                    Text="{strings:Resources Key=SetPlaybackOptions}"
-                    Visibility="{x:Bind Common.IsAdvancedModeEnabled}">
-                    <MenuFlyoutItem.Command>
-                        <commands:SetPlaybackOptionsCommand PlayCommand="{x:Bind ViewModel.PlayCommand}" />
-                    </MenuFlyoutItem.Command>
-                </MenuFlyoutItem>
+                    Icon="{ui:SymbolIcon Symbol=Delete}"
+                    Text="{strings:Resources Key=Delete}" />
             </MenuFlyout>
+
+            <DataTemplate x:Key="MediaGridViewItemTemplate" x:DataType="viewmodels:PlaylistViewModel">
+                <controls:CommonGridViewItem
+                    Title="{x:Bind Name, Mode=OneWay}"
+                    Width="{StaticResource CommonGridViewItemWidth}"
+                    Caption="{x:Bind strings:Resources.ItemsCount(ItemsCount), Mode=OneWay}"
+                    IsPlaying="{x:Bind IsPlaying, Mode=OneWay}"
+                    ThumbnailHeight="{StaticResource CommonGridViewItemThumbnailHeight}">
+                    <controls:CommonGridViewItem.PlaceholderIconSource>
+                        <FontIconSource
+                            FontFamily="{StaticResource ScreenboxSymbolThemeFontFamily}"
+                            FontSize="{StaticResource GridItemPlaceholderIconFontSize}"
+                            Glyph="{StaticResource PlaylistGlyph}" />
+                    </controls:CommonGridViewItem.PlaceholderIconSource>
+                </controls:CommonGridViewItem>
+            </DataTemplate>
         </ResourceDictionary>
     </Page.Resources>
 
-    <interactivity:Interaction.Behaviors>
-        <behaviors:AutoFocusBehavior />
-    </interactivity:Interaction.Behaviors>
-
     <Grid>
-        <muxc:ProgressBar
-            VerticalAlignment="Top"
-            IsIndeterminate="True"
-            Visibility="{x:Bind ViewModel.IsLoading, Mode=OneWay}" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <Grid
+            x:Name="HeaderGrid"
+            Grid.Row="0"
+            MinHeight="{StaticResource PageHeaderMinHeight}"
+            Margin="{StaticResource BottomMediumMargin}"
+            Padding="{StaticResource ContentPagePadding}">
+            <TextBlock
+                x:Name="HeaderText"
+                Style="{StaticResource TitleMediumTextBlockStyle}"
+                Text="{strings:Resources Key=Playlists}" />
+            <Button
+                x:Name="HeaderCreateButton"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                Click="HeaderCreateButton_OnClick">
+                <StackPanel Orientation="Horizontal">
+                    <FontIcon Margin="{StaticResource IconButtonStandardIconMargin}" Glyph="&#xE710;" />
+                    <TextBlock
+                        x:Name="HeaderCreateButtonText"
+                        Margin="8,0,0,0"
+                        Text="{strings:Resources Key=NewPlaylist}" />
+                </StackPanel>
+            </Button>
+        </Grid>
+
         <GridView
-            x:Name="VideosGridView"
-            Margin="{StaticResource TopLargeMargin}"
+            x:Name="PlaylistsGridView"
+            Grid.Row="2"
             Padding="{StaticResource GridViewContentPagePadding}"
-            ui:ListViewExtensions.Command="{x:Bind ViewModel.PlayCommand}"
+            ui:ListViewExtensions.Command="{x:Bind Common.OpenPlaylistCommand}"
+            ui:ScrollViewerExtensions.VerticalScrollBarMargin="{x:Bind Common.ScrollBarMargin, Mode=OneWay}"
             IsItemClickEnabled="True"
             ItemContainerStyle="{StaticResource GridViewItemMediaCardStyle}"
-            ItemTemplate="{StaticResource WideMediaGridViewItemTemplate}"
-            ItemsSource="{x:Bind ViewModel.Videos}"
+            ItemTemplate="{StaticResource MediaGridViewItemTemplate}"
+            ItemsSource="{x:Bind ViewModel.Playlists}"
             SelectionMode="None">
             <GridView.Resources>
                 <commands:BindableCommand x:Key="MediaListViewItemPlayCommand" Command="{x:Bind ViewModel.PlayCommand}" />
@@ -93,8 +118,6 @@
             </GridView.Footer>
             <interactivity:Interaction.Behaviors>
                 <behaviors:ListViewContextTriggerBehavior Flyout="{StaticResource ItemFlyout}" />
-                <behaviors:BringIntoViewWithOffsetBehavior FromBottom="{x:Bind Common.FooterBottomPaddingHeight, Mode=OneWay}" />
-                <behaviors:ThumbnailGridViewBehavior />
             </interactivity:Interaction.Behaviors>
         </GridView>
 
@@ -111,7 +134,8 @@
                         </triggers:IsEqualStateTrigger>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="VideosGridView.Padding" Value="{StaticResource GridViewContentPageMinimalPadding}" />
+                        <Setter Target="HeaderGrid.Padding" Value="{StaticResource ContentPageMinimalPadding}" />
+                        <Setter Target="PlaylistsGridView.Padding" Value="{StaticResource GridViewContentPageMinimalPadding}" />
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
